# pandas-money

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: unit-test.yaml
examples/: usage.py
pandas_money/: __init__.py  money_dtype.py  series.py
pandas_money/tests/: test_indexing.py  test_money_dtype.py  test_series.py
